cmake_minimum_required (VERSION 2.8)
set(REQUIRED_CPP_VERSION 17)

set(PROJECT_NAME MicroMultiEtt)
project(${PROJECT_NAME} CXX)
add_executable(${PROJECT_NAME} src/server.cpp)
set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD ${REQUIRED_CPP_VERSION})
set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD_REQUIRED ON)
set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
include_directories(${CMAKE_CURRENT_LIST_DIR}/include)
include_directories(${CMAKE_CURRENT_LIST_DIR}/json/include)
include_directories(${CMAKE_CURRENT_LIST_DIR}/includelibs)
link_libraries(${CMAKE_CURRENT_LIST_DIR}/lib/uWS.lib)
link_libraries(${CMAKE_CURRENT_LIST_DIR}/lib/libeay32.lib)
link_libraries(${CMAKE_CURRENT_LIST_DIR}/lib/ssleay32.lib)
link_libraries(${CMAKE_CURRENT_LIST_DIR}/lib/libuv.lib)
add_subdirectory(json)